--- a/public/index.ejs
+++ b/public/index.ejs
@@ -189,9 +189,7 @@
                 </button>
             </div>
 
-            <div class="app-pagination app-pagination--fixed">
-                <pagination></pagination>
-            </div>
+            <div class="app-pagination app-pagination--fixed" pagination></div>
 
             <modal-profile></modal-profile>
             <modal-trophy></modal-trophy>
