--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -15,25 +15,80 @@
                 <div class="app-profile__name">
                     <a class="app-profile__name" href>{{ data.name }}</a>
                 </div>
-                <div class="app-profile__info">
-                    <span class="app-icon app-icon__ranking"></span>
-                    <span>{{ data.ranking }}</span>
+                <div class="app-profile__info app-profile__info--blitz" title="{{ 'blitz'|translate }}">
+                    <i class="app-icon material-icons">flash_on</i>
+                    <div class="app-profile__info-content app-profile__info-content--points" title="{{ 'points'|translate }} ({{ 'blitz'|translate }})">
+                        {{ data.blitz.points }}
+                    </div>
+                    <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'blitz'|translate }})">
+                        <i class="app-icon material-icons">poll</i>
+                        {{ data.blitz.ranking }}
+                    </div>
                 </div>
-                <div class="app-profile__info">
-                    <span class="app-icon app-icon__points"></span>
-                    <span>{{ data.points }}</span>
+                <div class="app-profile__info app-profile__info--rapid" title="{{ 'rapid'|translate }}">
+                    <i class="app-icon material-icons">timer</i>
+                    <div class="app-profile__info-content app-profile__info-content--points" title="{{ 'points'|translate }} ({{ 'rapid'|translate }})">
+                        {{ data.rapid.points }}
+                    </div>
+                    <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'rapid'|translate }})">
+                        <i class="app-icon material-icons">poll</i>
+                        {{ data.rapid.ranking }}
+                    </div>
                 </div>
             </div>
-            <div class="app-profile__stats">
-                <div ng-repeat="chart in charts" class="app-profile__stat app-profile__stat--{{ chart.name }}">
-                    <canvas class="app-profile__stat-chart" data-chart="{{ chart.name }}"></canvas>
-                    <div class="app-profile__stat-text">
-                        <span class="app-profile__stat-value">
-                            {{ chart.value }}
-                        </span>
-                        <span class="app-profile__stat-desc">
-                            {{ chart.name|translate }}
-                        </span>
+            <div class="app-profile__game">
+                <div class="app-profile__info-title">
+                    {{ 'blitz'|translate }}
+                    <div class="app-profile__info app-profile__info--game app-profile__info--blitz" title="{{ 'blitz'|translate }}">
+                        <i class="app-icon material-icons">flash_on</i>
+                        <div class="app-profile__info-content app-profile__info-content--points" title="{{ 'points'|translate }} ({{ 'blitz'|translate }})">
+                            {{ data.blitz.points }}
+                        </div>
+                        <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'blitz'|translate }})">
+                            <i class="app-icon material-icons">poll</i>
+                            {{ data.blitz.ranking }}
+                        </div>
+                    </div>
+                </div>
+                <div class="app-profile__stats">
+                    <div ng-repeat="chart in charts.blitz" class="app-profile__stat app-profile__stat--{{ chart.name }}">
+                        <canvas class="app-profile__stat-chart" data-chart="blitz-{{ chart.name }}"></canvas>
+                        <div class="app-profile__stat-text">
+                            <span class="app-profile__stat-value">
+                                {{ chart.value }}
+                            </span>
+                            <span class="app-profile__stat-desc">
+                                {{ chart.name|translate }}
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="app-profile__game">
+                <div class="app-profile__info-title">
+                    {{ 'rapid'|translate }}
+                    <div class="app-profile__info app-profile__info--game app-profile__info--rapid" title="{{ 'rapid'|translate }}">
+                        <i class="app-icon material-icons">timer</i>
+                        <div class="app-profile__info-content app-profile__info-content--points" title="{{ 'points'|translate }} ({{ 'rapid'|translate }})">
+                            {{ data.rapid.points }}
+                        </div>
+                        <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'rapid'|translate }})">
+                            <i class="app-icon material-icons">poll</i>
+                            {{ data.rapid.ranking }}
+                        </div>
+                    </div>
+                </div>
+                <div class="app-profile__stats">
+                    <div ng-repeat="chart in charts.rapid" class="app-profile__stat app-profile__stat--{{ chart.name }}">
+                        <canvas class="app-profile__stat-chart" data-chart="rapid-{{ chart.name }}"></canvas>
+                        <div class="app-profile__stat-text">
+                            <span class="app-profile__stat-value">
+                                {{ chart.value }}
+                            </span>
+                            <span class="app-profile__stat-desc">
+                                {{ chart.name|translate }}
+                            </span>
+                        </div>
                     </div>
                 </div>
             </div>
