--- a/public/app/components/templates/sortable.html
+++ b/public/app/components/templates/sortable.html
@@ -1,4 +1,4 @@
-<a href ng-click="sort()">
-    <span class="app-icon__{{ icon }}"></span>
-    <span ng-class="{'app-icon__sort-down': reverse, 'app-icon__sort-up': !reverse}" class="app-icon__table-sortable"></span>
+<a class="app-table__sortable" href ng-click="sort()"
+   ng-class="{'app-table__sortable--down': reverse, 'app-table__sortable--up': !reverse}">
+    <i class="material-icons">{{ icon }}</i>
 </a>
