--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1775,7 +1775,8 @@ a {
 }
 
 .app-game__box.last-turn,
-.app-game__box.selected {
+.app-game__box.selected,
+.app-game__box.is-check {
   border-style: ridge solid;
   border-width: 3px;
   box-sizing: border-box;
@@ -1789,6 +1790,10 @@ a {
 
 .app-game__box.selected {
   border-color: #607D8B;
+}
+
+.app-game__box.is-check {
+  border-color: #FF5722;
 }
 
 .app-game__box.ui-droppable:after {
