fix win draw lose

--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -93,7 +93,7 @@
                     <button ng-disabled="!possibleDraw()"
                             show-modal="#modal-possible-draw" 
                             class="app-button mdl-button mdl-js-button">
-                            {{ 'draw'|translate }}
+                            {{ 'null'|translate }}
                     </button>
                 </td>
             </tr>
