fix finish game

--- a/public/app/game/templates/game.html
+++ b/public/app/game/templates/game.html
@@ -469,12 +469,11 @@
             </div>
 
             <div class="app-game__result-link">
-                <button modal-close
-                        show-modal="#modal-create-game"
-                        class="mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
+                <button show-modal="#modal-create-game"
+                        class="app-button mdl-button mdl-button--colored mdl-button--raised mdl-js-button mdl-js-ripple-effect">
                     {{ 'create_game' | translate }}
                 </button>
-                <a modal-close href="/" class="mdl-button mdl-js-button mdl-button--raised">
+                <a modal-close href="/" class="app-button mdl-button mdl-js-button mdl-button--raised">
                     {{ 'home' | translate}}
                 </a>
             </div>
