--- a/public/app/components/templates/modal-profile.html
+++ b/public/app/components/templates/modal-profile.html
@@ -21,8 +21,8 @@
                         {{ data.blitz.points }}
                     </div>
                     <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'blitz'|translate }})">
-                        <i class="app-icon material-icons">poll</i>
-                        {{ data.blitz.ranking }}
+                        <i class="app-icon material-icons">equalizer</i>
+                        {{ data.blitz.ranking | number }}
                     </div>
                 </div>
                 <div class="app-profile__info app-profile__info--rapid" title="{{ 'rapid'|translate }}">
@@ -31,8 +31,8 @@
                         {{ data.rapid.points }}
                     </div>
                     <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'rapid'|translate }})">
-                        <i class="app-icon material-icons">poll</i>
-                        {{ data.rapid.ranking }}
+                        <i class="app-icon material-icons">equalizer</i>
+                        {{ data.rapid.ranking | number }}
                     </div>
                 </div>
             </div>
@@ -45,8 +45,8 @@
                             {{ data.blitz.points }}
                         </div>
                         <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'blitz'|translate }})">
-                            <i class="app-icon material-icons">poll</i>
-                            {{ data.blitz.ranking }}
+                            <i class="app-icon material-icons">equalizer</i>
+                            {{ data.blitz.ranking | number }}
                         </div>
                     </div>
                 </div>
@@ -73,8 +73,8 @@
                             {{ data.rapid.points }}
                         </div>
                         <div class="app-profile__info-content app-profile__info-content--ranking" title="{{ 'ranking'|translate }} ({{ 'rapid'|translate }})">
-                            <i class="app-icon material-icons">poll</i>
-                            {{ data.rapid.ranking }}
+                            <i class="app-icon material-icons">equalizer</i>
+                            {{ data.rapid.ranking | number }}
                         </div>
                     </div>
                 </div>
