--- a/public/css/style.css
+++ b/public/css/style.css
@@ -778,7 +778,6 @@ a {
 
 .app-profile__info-title {
   font-size: 24px;
-  margin-right: 6px;
   margin-bottom: 12px;
 }
 
@@ -786,15 +785,10 @@ a {
   margin-left: -6px;
 }
 
-.app-profile__info.app-profile__info--game {
+.app-profile__info--game {
   position: relative;
-  font-size: 15px;
   top: 5px;
   margin-left: 0;
-}
-
-.app-profile__info.app-profile__info--game > .app-icon {
-    font-size: 24px;
 }
 
 .app-profile__info > .app-icon {
@@ -2692,6 +2686,11 @@ a {
 
   .app-create-game__choices .app-button:nth-of-type(1n + 5) {
     margin-bottom: 0; 
+  }
+
+  .app-profile__info-title {
+    font-size: 21px;
+    margin-bottom: 6px;
   }
 }
 
