--- a/public/index.ejs
+++ b/public/index.ejs
@@ -208,7 +208,7 @@
         <script src="lib/jquery.min.js"></script>
         <script src="lib/jquery-ui.min.js"></script>
 
-        <script src="lib/chart.min.js"></script>
+        <script src="lib/progress-bar.min.js"></script>
 
         <script src="lib/material.min.js"></script>
 
